slight doc improvements

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,7 +15,8 @@
 			"helm": "latest",
 			"minikube": "latest"
 		}
-	}
+	},
+	"postCreateCommand": "./install-tools.sh"
 	
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
