--- a/ekscluster/eks-prod.yaml
+++ b/ekscluster/eks-prod.yaml
@@ -2,35 +2,31 @@ apiVersion: eksctl.io/v1alpha5
 kind: ClusterConfig
 
 metadata:
-  name: eks02
+  name: staging01
   region: ap-southeast-2
-iam:
-  withOIDC: true
+  version: "1.31"
+  tags: 
+    Owner: Tutorials and Workshops
+    Repository: https://github.com/wagov-dtt/tutorials-and-workshops
 
 vpc:
   nat:
     gateway: HighlyAvailable
 
+addonsConfig:
+  autoApplyPodIdentityAssociations: true
+
 addons:
+  - name: eks-pod-identity-agent
   - name: aws-ebs-csi-driver
     configurationValues: |-
       defaultStorageClass:
         enabled: true
   - name: snapshot-controller
+  - name: aws-mountpoint-s3-csi-driver
 
 managedNodeGroups:
-  - name: ondemand
+  - name: workers
     amiFamily: Bottlerocket
     instanceType: m6a.2xlarge
-    volumeSize: 200
-    minSize: 0
-    maxSize: 20
-    desiredCapacity: 0
-  - name: spot
-    amiFamily: Bottlerocket
-    instanceType: m6a.2xlarge
-    spot: true
-    volumeSize: 200
-    minSize: 1
-    maxSize: 40
-    desiredCapacity: 2
+    desiredCapacity: 3
