cloudfront distribs with vpc origns look ace, piko needs further review

--- a/kustomize/base/piko-ingress.yaml
+++ b/kustomize/base/piko-ingress.yaml
@@ -26,6 +26,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: piko01-piko
+                name: whoami-service
                 port:
-                  name: upstream
+                  number: 80
