--- a/kustomize/base/whoami-debug.yaml
+++ b/kustomize/base/whoami-debug.yaml
@@ -1,22 +1,10 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: whoami-service
-spec:
-  selector:
-    app: whoami
-  ports:
-  - protocol: TCP
-    port: 80
-    targetPort: 80
----
-apiVersion: apps/v1
+# Application to expose
 kind: Deployment
+apiVersion: apps/v1
 metadata:
-  name: whoami-deployment
-  labels:
-    app: whoami
+  name: whoami
 spec:
+  replicas: 3
   selector:
     matchLabels:
       app: whoami
@@ -28,7 +16,55 @@ spec:
       containers:
       - name: whoami
         image: traefik/whoami
-        ports:
-        - containerPort: 80
-          hostPort: 80
-          name: http
+        resources:
+          requests:
+            memory: "128Mi"
+            cpu: "500m"
+---
+# Service to reach the application on the cluster
+apiVersion: v1
+kind: Service
+metadata:
+  name: whoami
+  labels:
+    app: whoami
+spec:
+  ports:
+  - port: 80
+    name: whoami
+  selector:
+    app: whoami
+---
+# ReferenceGrant
+apiVersion: gateway.networking.k8s.io/v1beta1
+kind: ReferenceGrant
+metadata:
+  name: traefik-grant
+spec:
+  from:
+  - group: gateway.networking.k8s.io
+    kind: HTTPRoute
+    namespace: traefik
+  to:
+  - group: ""
+    kind: Service
+---
+# HTTPRoute
+apiVersion: gateway.networking.k8s.io/v1
+kind: HTTPRoute
+metadata:
+  name: whoami-httproute
+spec:
+  parentRefs:
+  - name: traefik-gateway
+    namespace: traefik
+  hostnames:
+  - whoami.training01.radk8s.net
+  rules:
+  - matches:
+    - path:
+        type: PathPrefix
+        value: /
+    backendRefs:
+    - name: whoami
+      port: 80
