--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,8 +7,7 @@
 	},
 	"features": {
 		"ghcr.io/devcontainers/features/docker-in-docker:2": {},
-		"ghcr.io/devcontainers/features/kubectl-helm-minikube:1": {},
-		"ghcr.io/meaningful-ooo/devcontainer-features/homebrew:2": {},
-		"ghcr.io/guiyomh/features/just:0": {}
-	}
+		"ghcr.io/devcontainers/features/kubectl-helm-minikube:1": {}
+	},
+	"onCreateCommand": ".devcontainer/onCreateCommand.sh"
 }
