--- a/kustomize/helm-values/traefik.yaml
+++ b/kustomize/helm-values/traefik.yaml
@@ -1,13 +1,15 @@
 ## File values.yaml ##
+# Use a few replicas to enable rolling updates without outages
+deployment:
+  replicas: 3
 providers:
-  # Disable the Ingress provider (optional)
-  # We do not want to use Ingress objects anymore!
+  # Disable the Ingress provider, we do not want to use Ingress objects anymore!
   kubernetesIngress:
     enabled: false
   # Enable the GatewayAPI provider
   kubernetesGateway:
     enabled: true
-# Allow the Gateway to expose HTTPRoute from all namespaces
+# Allow the Gateway to expose HTTPRoute from all namespaces (still needs ReferenceGrants)
 gateway:
   listeners:
     web:
