--- a/kustomize/base/whoami-debug.yaml
+++ b/kustomize/base/whoami-debug.yaml
@@ -55,16 +55,21 @@ kind: HTTPRoute
 metadata:
   name: whoami-httproute
 spec:
-  parentRefs:
-  - name: traefik-gateway
-    namespace: traefik
   hostnames:
   - whoami.training01.radk8s.net
+  parentRefs:
+  - group: gateway.networking.k8s.io
+    kind: Gateway
+    name: traefik-gateway
+    namespace: traefik
   rules:
-  - matches:
+  - backendRefs:
+    - group: ""
+      kind: Service
+      name: whoami
+      port: 80
+      weight: 1
+    matches:
     - path:
         type: PathPrefix
         value: /
-    backendRefs:
-    - name: whoami
-      port: 80
