s3proxy works well on minikube, need to test https://github.com/gaul/s3proxy/wiki/Storage-backend-examples#aws-s3---managed-identity on eks

--- a/kustomize/overlays/training01/kustomization.yaml
+++ b/kustomize/overlays/training01/kustomization.yaml
@@ -4,5 +4,7 @@ kind: Kustomization
 resources:
   - ../../base
   - ../../everest
+patches:
+  - path: s3proxy.yaml
 commonAnnotations:
   targetCluster: training01
