--- a/kustomize/overlays/local/kustomization.yaml
+++ b/kustomize/overlays/local/kustomization.yaml
@@ -2,9 +2,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - storageclass.yaml
-  - ../../base
+  - ../../kube-system
   - ../../everest
+  - ../../base
 
 commonAnnotations:
-  targetCluster: minikube
+  targetCluster: local
