--- a/drupal-performance/.ddev/php/99-wagov-ovverides.ini
+++ b/drupal-performance/.ddev/php/99-wagov-ovverides.ini
@@ -1,5 +1,5 @@
-; WAGOV PHP Overrides
-memory_limit = 512M
+; PHP Overrides
+memory_limit = 768M
 post_max_size = 512M
 upload_max_filesize = 500M
 
