ddev vols, vegeta

--- a/drupal-performance/justfile
+++ b/drupal-performance/justfile
@@ -6,8 +6,12 @@ prereqs:
 
 ddev:
     which ddev || curl -fsSL https://ddev.com/install.sh | bash
-    ddev config global --use-hardened-images --performance-mode=none --omit-containers=ddev-ssh-agent,ddev-router
+    ddev config global --use-hardened-images --omit-containers=ddev-ssh-agent,ddev-router
     ddev debug rebuild --service web
+    ddev status
+
+vegeta-ddev HOST:
+    echo "GET $(ddev describe -j | jq -r .raw.primary_url)/" | vegeta attack -header "Host: {{HOST}}" -duration=10s -rate=500 | vegeta report -type=text
 
 # Load test a local server using a specific Host header (bypasses LB)
 # Usage: just vegeta-host HOST=myapp.example.com URL="http://127.0.0.1:8080/path"
