php-fpm pool setup

--- a/drupal-performance/.ddev/web-build/Dockerfile
+++ b/drupal-performance/.ddev/web-build/Dockerfile
@@ -1,1 +1,2 @@
-COPY www.conf /etc/php/${PHP_VERSION}/fpm/pool.d/www.conf
+COPY www.conf /etc/php/8.3/fpm/pool.d/www.conf
+COPY www.conf /etc/php/8.4/fpm/pool.d/www.conf
