--- a/drupal-performance/.ddev/web-build/www.conf
+++ b/drupal-performance/.ddev/web-build/www.conf
@@ -2,7 +2,8 @@
 listen = /run/php-fpm.sock
 listen.mode = 0666
 pm = static
-pm.max_children = 100 #for approx 8GB ram with approx 70MB a worker
+; for approx 8GB ram with approx 70MB a worker
+pm.max_children = 100
 pm.max_requests = 500
 pm.status_path = /phpstatus
 clear_env = no
