--- a/drupal-performance/.ddev/web-build/Dockerfile
+++ b/drupal-performance/.ddev/web-build/Dockerfile
@@ -1,2 +1,3 @@
 COPY www.conf /etc/php/8.3/fpm/pool.d/www.conf
 COPY www.conf /etc/php/8.4/fpm/pool.d/www.conf
+COPY mpm-event.conf /etc/apache2/mods-available/mpm-event.conf
