--- a/drupal-cms-perftest/.ddev/docker-compose.railpack.yaml
+++ b/drupal-cms-perftest/.ddev/docker-compose.railpack.yaml
@@ -1,13 +1,38 @@
 services:
-  dummy-service:
+  railpack:
     container_name: "ddev-${DDEV_SITENAME}-railpack"
     image: ${DDEV_SITENAME}
     labels:
       com.ddev.site-name: ${DDEV_SITENAME}
-      com.ddev.approot: ${DDEV_APPROOT}
+    ports:
+      - "8080:80"
     expose:
       - "80"
     environment:
-      - VIRTUAL_HOST=$DDEV_HOSTNAME
-      - HTTP_EXPOSE=8080:80
-      - HTTPS_EXPOSE=8443:80
+      VIRTUAL_HOST: $DDEV_HOSTNAME
+      HTTPS_EXPOSE: "8443:80"
+      IS_DDEV_PROJECT: "true"
+      CADDY_SERVER_EXTRA_DIRECTIVES: |-
+        @hiddenPhpFilesRegexp path_regexp \..*/.*\.php$
+        error @hiddenPhpFilesRegexp 403
+
+        @notFoundPhpFiles path_regexp /vendor/.*\.php$
+        error @notFoundPhpFiles 404
+
+        @notFoundPhpFilesRegexp path_regexp ^/sites/[^/]+/files/.*\.php$
+        error @notFoundPhpFilesRegexp 404
+
+        @privateDirRegexp path_regexp ^/sites/.*/private/
+        error @privateDirRegexp 403
+
+        @protectedFilesRegexp {
+          not path /.well-known*
+          path_regexp \.(engine|inc|install|make|module|profile|po|sh|.*sql|theme|twig|tpl(\.php)?|xtmpl|yml)(~|\.sw[op]|\.bak|\.orig|\.save)?$|^/(\..*|Entries.*|Repository|Root|Tag|Template|composer\.(json|lock)|web\.config|yarn\.lock|package\.json)$|^\/#.*#$|\.php(~|\.sw[op]|\.bak|\.orig|\.save)$
+        }
+        error @protectedFilesRegexp 403
+
+        @static {
+          file
+          path *.avif *.css *.eot *.gif *.gz *.ico *.jpg *.jpeg *.js *.otf *.pdf *.png *.svg *.ttf *.webp *.woff *.woff2
+        }
+        header @static Cache-Control "max-age=31536000,public,immutable"
