improved caddy config to match https://git.drupalcode.org/project/drupal/-/commit/f1d611661998cad5eea3652ac09277433ec08800 global opts also

--- a/drupal-cms-perftest/.ddev/docker-compose.railpack.yaml
+++ b/drupal-cms-perftest/.ddev/docker-compose.railpack.yaml
@@ -12,6 +12,9 @@ services:
       VIRTUAL_HOST: $DDEV_HOSTNAME
       HTTPS_EXPOSE: "8443:80"
       IS_DDEV_PROJECT: "true"
+      CADDY_GLOBAL_OPTIONS: |-
+        order php_server before file_server
+        order php before file_server
       CADDY_SERVER_EXTRA_DIRECTIVES: |-
         @hiddenPhpFilesRegexp path_regexp \..*/.*\.php$
         error @hiddenPhpFilesRegexp 403
