--- a/rclone/kustomize/kustomization.yaml
+++ b/rclone/kustomize/kustomization.yaml
@@ -1,13 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: tutorials-and-workshops
 resources:
+  - ./helm
   - deployment.yaml
-configMapGenerator:
-- name: rclone-config
-  files:
-  - rclone.conf
-labels:
-  - pairs:
-      app: rclone-lab
-    includeSelectors: true
