add S3 Pod Identity demo, refactor databases to shared dir, improve docs and minimise helm

--- a/kustomize-ducklake/databases/kustomization.yaml
+++ b/kustomize-ducklake/databases/kustomization.yaml
@@ -1,9 +1,8 @@
 # kustomization.yaml
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: everest
+namespace: databases
 resources:
+- namespace.yaml
 - postgres.yaml
-- mysql.yaml
-- mongodb.yaml
-- s3proxy.yaml
+- rclone-s3.yaml
