--- a/kustomize/databases/kustomization.yaml
+++ b/kustomize/databases/kustomization.yaml
@@ -1,7 +1,10 @@
 # kustomization.yaml
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: everest
+namespace: databases
 resources:
+- namespace.yaml
 - postgres.yaml
-- s3proxy.yaml
+- mysql.yaml
+- mongodb.yaml
+- elasticsearch.yaml
