--- a/kustomize/kube-system/kustomization.yaml
+++ b/kustomize/kube-system/kustomization.yaml
@@ -3,6 +3,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: kube-system
 resources:
-- https://github.com/k3s-io/helm-controller/releases/latest/download/deploy-cluster-scoped.yaml
-- https://github.com/k8up-io/k8up/releases/latest/download/k8up-crd.yaml
-- helm-charts.yaml
+- namespace.yaml
