--- a/kustomize/overlays/training01/kustomization.yaml
+++ b/kustomize/overlays/training01/kustomization.yaml
@@ -3,8 +3,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../base
-  - ../../everest
-patches:
-  - path: s3proxy.yaml
+  - ../../databases
 commonAnnotations:
   targetCluster: training01
