--- a/kustomize-s3-pod-identity/base/mysql.yaml
+++ b/kustomize-s3-pod-identity/base/mysql.yaml
@@ -65,7 +65,7 @@ spec:
         command: ["sh", "-c", "until mysqladmin ping -h mysql -u root -ptestpass; do sleep 2; done"]
       containers:
       - name: sysbench
-        image: perconalab/sysbench
+        image: perconalab/sysbench:1.1
         command: ["sysbench"]
         args: ["--db-driver=mysql", "--mysql-host=mysql", "--mysql-user=root", 
                "--mysql-password=testpass", "--mysql-db=sbtest", 
