--- a/rclone/kustomize/kustomization.yaml
+++ b/rclone/kustomize/kustomization.yaml
@@ -1,5 +1,6 @@
+# rclone CSI demo resources (S3 server + filebrowser)
+# CSI driver installed via helm in justfile
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./helm
   - deployment.yaml
