--- a/kustomize/base/whoami-debug.yaml
+++ b/kustomize/base/whoami-debug.yaml
@@ -1,10 +1,10 @@
-# Application to expose
+# Simple debug app
 kind: Deployment
 apiVersion: apps/v1
 metadata:
   name: whoami
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       app: whoami
@@ -18,10 +18,9 @@ spec:
         image: traefik/whoami
         resources:
           requests:
-            memory: "128Mi"
-            cpu: "500m"
+            memory: "64Mi"
+            cpu: "100m"
 ---
-# Service to reach the application on the cluster
 apiVersion: v1
 kind: Service
 metadata:
@@ -34,42 +33,3 @@ spec:
     name: whoami
   selector:
     app: whoami
----
-# ReferenceGrant
-apiVersion: gateway.networking.k8s.io/v1beta1
-kind: ReferenceGrant
-metadata:
-  name: traefik-grant
-spec:
-  from:
-  - group: gateway.networking.k8s.io
-    kind: HTTPRoute
-    namespace: traefik
-  to:
-  - group: ""
-    kind: Service
----
-# HTTPRoute
-apiVersion: gateway.networking.k8s.io/v1
-kind: HTTPRoute
-metadata:
-  name: whoami-httproute
-spec:
-  hostnames:
-  - whoami.training01.radk8s.net
-  parentRefs:
-  - group: gateway.networking.k8s.io
-    kind: Gateway
-    name: traefik-gateway
-    namespace: traefik
-  rules:
-  - backendRefs:
-    - group: ""
-      kind: Service
-      name: whoami
-      port: 80
-      weight: 1
-    matches:
-    - path:
-        type: PathPrefix
-        value: /
