--- a/kustomize/overlays/local/kustomization.yaml
+++ b/kustomize/overlays/local/kustomization.yaml
@@ -1,8 +1,8 @@
-# kustomization.yaml
+# Entry point for local k3d deployment (databases + debug pod)
+# Uses k3d defaults: traefik ingress, local-path storage
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ../../kube-system
   - ../../databases
   - ../../base
 
