--- a/mise.toml
+++ b/mise.toml
@@ -1,12 +1,11 @@
 [tools]
 awscli = { version = "latest", symlink_bins = "true" }
-eksctl = "latest"
-fzf = "latest"
-gh = "latest"
+"ubi:ddev/ddev" = "latest"
+helm = "latest"
 k3d = "latest"
 k9s = "latest"
 kubectl = "latest"
-semgrep = "latest"
 terraform = "latest"
-"ubi:railwayapp/railpack" = "latest"
 uv = "latest"
+"ubi:tsenart/vegeta" = "latest"
+mkcert = "latest"
