drupal frankenphp + benchmarks

--- a/drupal-cms-perftest/composer.json
+++ b/drupal-cms-perftest/composer.json
@@ -34,15 +34,15 @@
     "drupal/bpmn_io": "^2.0.6",
     "drupal/captcha": "^2.0.7",
     "drupal/coffee": "^2",
-    "drupal/core": "^11.2",
-    "drupal/core-composer-scaffold": "^11.2.4",
-    "drupal/core-project-message": "^11.2.4",
-    "drupal/core-recipe-unpack": "^11.2.4",
-    "drupal/core-recommended": "^11.2.4",
-    "drupal/core-vendor-hardening": "^11.2.4",
+    "drupal/core": "~11.2.10",
+    "drupal/core-composer-scaffold": "~11.2.10",
+    "drupal/core-project-message": "~11.2.10",
+    "drupal/core-recipe-unpack": "~11.2.10",
+    "drupal/core-recommended": "~11.2.10",
+    "drupal/core-vendor-hardening": "~11.2.10",
     "drupal/dashboard": "^2",
     "drupal/drupal_cms_helper": "^1.2",
-    "drupal/drupal_cms_olivero": "^1.2",
+    "drupal/drupal_cms_olivero": "^1.2.7",
     "drupal/easy_breadcrumb": "^2.0.9",
     "drupal/easy_email": "^3.0.2",
     "drupal/easy_email_theme": "^1",
@@ -72,7 +72,7 @@
     "drupal/sam": "^1.2",
     "drupal/scheduler": "^2.2",
     "drupal/scheduler_content_moderation_integration": "^3.0.4",
-    "drupal/search_api": "^1.36",
+    "drupal/search_api": "^1.39",
     "drupal/search_api_autocomplete": "^1.9",
     "drupal/search_api_exclude": "^2",
     "drupal/selective_better_exposed_filters": "^3",
