--- a/drupal-cms-perftest/.ddev/config.frankenphp.yaml
+++ b/drupal-cms-perftest/.ddev/config.frankenphp.yaml
@@ -1,8 +1,7 @@
-#ddev-generated
 webserver_type: generic
 web_extra_daemons:
   - name: "frankenphp"
-    command: "frankenphp run --config /etc/frankenphp/Caddyfile --adapter=caddyfile"
+    command: "frankenphp run --config /var/www/html/.ddev/Caddyfile.drupal --adapter=caddyfile"
     directory: /var/www/html
 web_extra_exposed_ports:
   - name: "frankenphp"
