updated with trivy checks for IaC

--- a/ducklake/databases/postgres.yaml
+++ b/ducklake/databases/postgres.yaml
@@ -23,6 +23,13 @@ spec:
       labels:
         app: postgres
     spec:
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 999
+        runAsGroup: 999
+        fsGroup: 999
+        seccompProfile:
+          type: RuntimeDefault
       containers:
       - name: postgres
         image: postgres:16
@@ -40,6 +47,11 @@ spec:
             cpu: "100m"
           limits:
             memory: "512Mi"
+            cpu: "500m"
+        securityContext:
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop: ["ALL"]
       volumes:
       - name: data
         emptyDir: {}
