--- a/kustomize/databases/elasticsearch.yaml
+++ b/kustomize/databases/elasticsearch.yaml
@@ -21,6 +21,13 @@ spec:
       labels:
         app: elasticsearch
     spec:
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 1000
+        runAsGroup: 1000
+        fsGroup: 1000
+        seccompProfile:
+          type: RuntimeDefault
       containers:
       - name: elasticsearch
         image: docker.elastic.co/elasticsearch/elasticsearch:8.15.0
@@ -46,6 +53,11 @@ spec:
             cpu: "100m"
           limits:
             memory: "1Gi"
+            cpu: "1000m"
+        securityContext:
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop: ["ALL"]
       volumes:
       - name: data
         emptyDir: {}
