--- a/kustomize/databases/mysql.yaml
+++ b/kustomize/databases/mysql.yaml
@@ -22,6 +22,13 @@ spec:
       labels:
         app: mysql
     spec:
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 1001
+        runAsGroup: 1001
+        fsGroup: 1001
+        seccompProfile:
+          type: RuntimeDefault
       containers:
       - name: mysql
         image: percona:8.0
@@ -39,6 +46,11 @@ spec:
             cpu: "100m"
           limits:
             memory: "512Mi"
+            cpu: "500m"
+        securityContext:
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop: ["ALL"]
       volumes:
       - name: data
         emptyDir: {}
