--- a/kustomize/databases/mongodb.yaml
+++ b/kustomize/databases/mongodb.yaml
@@ -22,6 +22,13 @@ spec:
       labels:
         app: mongodb
     spec:
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 999
+        runAsGroup: 999
+        fsGroup: 999
+        seccompProfile:
+          type: RuntimeDefault
       containers:
       - name: mongodb
         image: mongo:7
@@ -39,6 +46,11 @@ spec:
             cpu: "100m"
           limits:
             memory: "512Mi"
+            cpu: "500m"
+        securityContext:
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop: ["ALL"]
       volumes:
       - name: data
         emptyDir: {}
